Fix spacing on home timeline list

--- a/app/javascript/flavours/aether/styles/components/right_column.scss
+++ b/app/javascript/flavours/aether/styles/components/right_column.scss
@@ -2,4 +2,9 @@
   .dismissable-banner {
     display: none;
   }
+
+  .list-panel {
+    margin-top: 0;
+    margin-bottom: 15px;
+  }
 }
